--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -43,6 +43,10 @@
     <%= f.label :caste_rank %><br />
     <%= f.text_field :caste_rank %>
   </div>
+  <div class="field">
+    <%= f.label :gender %><br />
+    <%= f.text_field :gender %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
