--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -10,6 +10,7 @@
     <th>Aieee score</th>
     <th>Mhcet score</th>
     <th>Caste rank</th>
+    <th>Gender</th>
     <th></th>
     <th></th>
     <th></th>
@@ -25,6 +26,7 @@
     <td><%= student.aieee_score %></td>
     <td><%= student.mhcet_score %></td>
     <td><%= student.caste_rank %></td>
+    <td><%= student.gender %></td>
     <td><%= link_to 'Show', student %></td>
     <td><%= link_to 'Edit', edit_student_path(student) %></td>
     <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
