--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -40,6 +40,11 @@
   <%= @student.caste_rank %>
 </p>
 
+<p>
+  <b>Gender:</b>
+  <%= @student.gender %>
+</p>
+
 
 <%= link_to 'Edit', edit_student_path(@student) %> |
 <%= link_to 'Back', students_path %>
