--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -3,10 +3,14 @@ welcome to mongodb test1
 
 <%= link_to "upload", "/showupload"%>
 <%=form_tag("/search",:method=>"get	") do	%>
-	College Name: <%= select_tag("college_id", options_for_select(College.all.map{|c| [c.name,c.id] }))%><br>
-	Branch Name: <%= select_tag("branch_id", options_for_select(Branch.all.map{|b| [b.name,b.name]}.uniq))%><br>
+	
+	<%= hidden_field_tag("attempt_id",@attempt_id)%>
+	<% @options.to_a.each_index do |index| %>
+		<% @option_index = index %>
+		<%= render 'college_options' %>
+	<%end%>
+	
 	Caste: <%= select_tag("caste",options_for_select(Cutoff.all.map{|co| [co.caste,co.caste]}.uniq))%><br>
-	Round: <%= select_tag("round",options_for_select(ROUND_NAMES,ROUND_NAMES))%><br>
 	Exam Type: <%= select_tag("exam_type",options_for_select(EXAM_TYPES,EXAM_TYPES))%><br>
 	Mark_type: <%= select_tag("marks_type",options_for_select(MARK_TYPES,MARK_TYPES))%><br>
 	From : <%= text_field_tag ("score_value_from")%><br>
